--- a/lab-ryan/public/index.html
+++ b/lab-ryan/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="./src/app.js"></script>
-</body>
+    
+<script type="text/javascript" src="app.js"></script><script type="text/javascript" src="app.js"></script></body>
 </html>
