--- a/lab-ryan/public/index.html
+++ b/lab-ryan/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Artist/Album App</title>
 </head>
 <body>
     <div id="root"></div>
-    
-<script type="text/javascript" src="app.js"></script><script type="text/javascript" src="app.js"></script></body>
+    <script type="text/javascript" src="app.js"></script>
+</body>
 </html>
